--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,18 @@
+---
 abstract: Catalyst  Runtime version
-author: The Catalyst Core Team - see http://catalyst.perl.org/
+author: 'The Catalyst Core Team - see http://catalyst.perl.org/'
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.67
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Catalyst-Runtime
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   CGI::Simple::Cookie: 0
   Carp: 0
   Class::Accessor::Fast: 0
@@ -17,7 +21,7 @@ requires:
   Data::Dump: 0
   File::Modified: 0
   HTML::Entities: 0
-  HTTP::Body: 0.6
+  HTTP::Body: 0.9
   HTTP::Headers: 1.64
   HTTP::Request: 0
   HTTP::Request::AsCGI: 0.5
@@ -34,4 +38,4 @@ requires:
   Tree::Simple::Visitor::FindByPath: 0
   URI: 1.35
   perl: 5.8.1
-version: 5.7007
+version: 5.7008
