--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,20 @@
----
+--- 
 abstract: Catalyst  Runtime version
-author: 'The Catalyst Core Team - see http://catalyst.perl.org/'
+author: The Catalyst Core Team - see http://catalyst.perl.org/
+build_requires: 
+  Test::Perl::Critic: 0
 distribution_type: module
 generated_by: Module::Install version 0.67
 license: perl
-meta-spec:
+meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 name: Catalyst-Runtime
-no_index:
-  directory:
+no_index: 
+  directory: 
     - inc
     - t
-requires:
+requires: 
   CGI::Simple::Cookie: 0
   Carp: 0
   Class::Accessor::Fast: 0
@@ -38,4 +40,4 @@ requires:
   Tree::Simple::Visitor::FindByPath: 0
   URI: 1.35
   perl: 5.8.1
-version: 5.7008
+version: 5.7009
