--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,8 @@ abstract: Catalyst  Runtime version
 author: The Catalyst Core Team - see http://catalyst.perl.org/
 build_requires: 
   Test::Perl::Critic: 0
+  Test::Pod: 1.14
+  Test::Pod::Coverage: 1.04
 distribution_type: module
 generated_by: Module::Install version 0.67
 license: perl
@@ -40,4 +42,4 @@ requires:
   Tree::Simple::Visitor::FindByPath: 0
   URI: 1.35
   perl: 5.8.1
-version: 5.7011
+version: 5.7012
