--- a/META.yml
+++ b/META.yml
@@ -2,10 +2,9 @@
 abstract: 'The Catalyst Framework Runtime'
 author:
   - 'Catalyst Contributors, see Catalyst.pm'
-build_requires:
-  Test::Perl::Critic: 0
-  Test::Pod: 1.14
-  Test::Pod::Coverage: 1.04
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: 6.46
 distribution_type: module
 generated_by: 'Module::Install version 0.77'
 license: perl
@@ -44,5 +43,9 @@ requires:
   URI: 1.35
   perl: 5.8.1
 resources:
+  IRC: irc://irc.perl.org/#catalyst
+  MailingList: http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/catalyst
+  homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
-version: 5.7099_04
+  repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
+version: 5.71000
