--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   Class::Data::Inheritable: 0
   ExtUtils::MakeMaker: 6.42
   Test::Exception: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -31,16 +32,17 @@ requires:
   HTML::Entities: 0
   HTTP::Body: 1.04
   HTTP::Headers: 1.64
-  HTTP::Request: 0
+  HTTP::Request: 5.814
   HTTP::Request::AsCGI: 0.8
-  HTTP::Response: 0
+  HTTP::Response: 5.813
   LWP::UserAgent: 0
   List::MoreUtils: 0
   MRO::Compat: 0
   Module::Pluggable: 3.9
   Moose: 0.90
   MooseX::Emulate::Class::Accessor::Fast: 0.00903
-  MooseX::MethodAttributes::Inheritable: 0.16
+  MooseX::MethodAttributes::Inheritable: 0.17
+  MooseX::Role::WithOverloading: 0.03
   Path::Class: 0.09
   Scalar::Util: 0
   String::RewritePrefix: 0.004
@@ -61,4 +63,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
-version: 5.80013
+version: 5.80014
