--- a/META.yml
+++ b/META.yml
@@ -20,29 +20,30 @@ no_index:
   directory:
     - inc
     - t
-recommends:
-  B::Hooks::OP::Check::StashChange: 0
 requires:
   B::Hooks::EndOfScope: 0.08
   CGI::Simple::Cookie: 0
   Carp: 0
   Class::C3::Adopt::NEXT: 0.07
-  Class::MOP: 0.83
+  Class::MOP: 0.95
   Data::Dump: 0
   HTML::Entities: 0
   HTTP::Body: 1.04
   HTTP::Headers: 1.64
   HTTP::Request: 5.814
-  HTTP::Request::AsCGI: 0.8
+  HTTP::Request::AsCGI: 1.0
   HTTP::Response: 5.813
   LWP::UserAgent: 0
   List::MoreUtils: 0
   MRO::Compat: 0
   Module::Pluggable: 3.9
-  Moose: 0.90
+  Moose: 0.93
   MooseX::Emulate::Class::Accessor::Fast: 0.00903
+  MooseX::Getopt: 0.25
   MooseX::MethodAttributes::Inheritable: 0.17
   MooseX::Role::WithOverloading: 0.03
+  MooseX::Types: 0
+  MooseX::Types::Common::Numeric: 0
   Path::Class: 0.09
   Scalar::Util: 0
   String::RewritePrefix: 0.004
@@ -54,7 +55,7 @@ requires:
   Tree::Simple: 1.15
   Tree::Simple::Visitor::FindByPath: 0
   URI: 1.35
-  namespace::autoclean: 0.09
+  namespace::autoclean: 0
   namespace::clean: 0
   perl: 5.8.4
 resources:
@@ -63,4 +64,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
-version: 5.80014_01
+version: 5.80014_02
