--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.910'
+generated_by: 'Module::Install version 0.95'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,13 +22,14 @@ no_index:
     - t
 requires:
   B::Hooks::EndOfScope: 0.08
-  CGI::Simple::Cookie: 0
+  CGI::Simple::Cookie: 1.109
   Carp: 0
   Class::C3::Adopt::NEXT: 0.07
   Class::MOP: 0.95
   Data::Dump: 0
+  Data::OptList: 0
   HTML::Entities: 0
-  HTTP::Body: 1.04
+  HTTP::Body: 1.06
   HTTP::Headers: 1.64
   HTTP::Request: 5.814
   HTTP::Request::AsCGI: 1.0
@@ -37,7 +38,7 @@ requires:
   List::MoreUtils: 0
   MRO::Compat: 0
   Module::Pluggable: 3.9
-  Moose: 0.93
+  Moose: 1.03
   MooseX::Emulate::Class::Accessor::Fast: 0.00903
   MooseX::Getopt: 0.25
   MooseX::MethodAttributes::Inheritable: 0.19
@@ -64,4 +65,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
-version: 5.80022
+version: 5.80023
