--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   Data::Dump: 0
   Data::OptList: 0
   HTML::Entities: 0
+  HTML::HeadParser: 0
   HTTP::Body: 1.06
   HTTP::Headers: 1.64
   HTTP::Request: 5.814
@@ -41,7 +42,7 @@ requires:
   Module::Pluggable: 3.9
   Moose: 1.03
   MooseX::Emulate::Class::Accessor::Fast: 0.00903
-  MooseX::Getopt: 0.25
+  MooseX::Getopt: 0.30
   MooseX::MethodAttributes::Inheritable: 0.19
   MooseX::Role::WithOverloading: 0.05
   MooseX::Types: 0
@@ -68,4 +69,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
-version: 5.80025
+version: 5.80026
