Import of FLORA/Catalyst-Runtime-5.89000-TRIAL.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.89000-TRIAL
gitpan-cpan-path:         FLORA/Catalyst-Runtime-5.89000-TRIAL.tar.gz
gitpan-cpan-author:       FLORA
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Catalyst Contributors, see Catalyst.pm'
 build_requires:
   Class::Data::Inheritable: 0
+  Data::Dump: 0
   ExtUtils::MakeMaker: 6.42
   Test::Exception: 0
   Test::More: 0.88
@@ -46,7 +47,10 @@ requires:
   MooseX::Role::WithOverloading: 0.05
   MooseX::Types: 0
   MooseX::Types::Common::Numeric: 0
+  MooseX::Types::LoadableClass: 0.003
   Path::Class: 0.09
+  Plack: 0.9935
+  Plack::Middleware::ReverseProxy: 0.04
   Scalar::Util: 0
   String::RewritePrefix: 0.004
   Sub::Exporter: 0
@@ -56,6 +60,7 @@ requires:
   Time::HiRes: 0
   Tree::Simple: 1.15
   Tree::Simple::Visitor::FindByPath: 0
+  Try::Tiny: 0
   URI: 1.35
   namespace::autoclean: 0.09
   namespace::clean: 0.13
@@ -66,4 +71,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: http://dev.catalyst.perl.org/repos/Catalyst/Catalyst-Runtime/
-version: 5.80030
+version: 5.89000
