Import of BOBTFISH/Catalyst-Runtime-5.80033.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.80033
gitpan-cpan-path:         BOBTFISH/Catalyst-Runtime-5.80033.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,16 @@
 ---
 abstract: 'The Catalyst Framework Runtime'
 author:
-  - 'Catalyst Contributors, see Catalyst.pm'
+  - '& COPYRIGHT'
 build_requires:
   Class::Data::Inheritable: 0
-  Data::Dump: 0
   ExtUtils::MakeMaker: 6.42
   Test::Exception: 0
   Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+generated_by: 'Module::Install version 1.01'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -47,10 +46,7 @@ requires:
   MooseX::Role::WithOverloading: 0.09
   MooseX::Types: 0
   MooseX::Types::Common::Numeric: 0
-  MooseX::Types::LoadableClass: 0.003
   Path::Class: 0.09
-  Plack: 0.9935
-  Plack::Middleware::ReverseProxy: 0.04
   Scalar::Util: 0
   String::RewritePrefix: 0.004
   Sub::Exporter: 0
@@ -60,7 +56,6 @@ requires:
   Time::HiRes: 0
   Tree::Simple: 1.15
   Tree::Simple::Visitor::FindByPath: 0
-  Try::Tiny: 0
   URI: 1.35
   namespace::autoclean: 0.09
   namespace::clean: 0.13
@@ -71,4 +66,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.89002
+version: 5.80033
