Import of BOBTFISH/Catalyst-Runtime-5.89003-TRIAL.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.89003-TRIAL
gitpan-cpan-path:         BOBTFISH/Catalyst-Runtime-5.89003-TRIAL.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,9 @@ author:
   - '& COPYRIGHT'
 build_requires:
   Class::Data::Inheritable: 0
+  Data::Dump: 0
   ExtUtils::MakeMaker: 6.42
+  HTTP::Request::Common: 0
   Test::Exception: 0
   Test::More: 0.88
 configure_requires:
@@ -46,7 +48,11 @@ requires:
   MooseX::Role::WithOverloading: 0.09
   MooseX::Types: 0
   MooseX::Types::Common::Numeric: 0
+  MooseX::Types::LoadableClass: 0.003
   Path::Class: 0.09
+  Plack: 0.9974
+  Plack::Middleware::ReverseProxy: 0.04
+  Plack::Test::ExternalServer: 0
   Scalar::Util: 0
   String::RewritePrefix: 0.004
   Sub::Exporter: 0
@@ -56,6 +62,7 @@ requires:
   Time::HiRes: 0
   Tree::Simple: 1.15
   Tree::Simple::Visitor::FindByPath: 0
+  Try::Tiny: 0
   URI: 1.35
   namespace::autoclean: 0.09
   namespace::clean: 0.13
@@ -66,4 +73,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.80033
+version: 5.89003
