--- a/META.yml
+++ b/META.yml
@@ -5,14 +5,15 @@ author:
 build_requires:
   Class::Data::Inheritable: 0
   Data::Dump: 0
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
   HTTP::Request::Common: 0
   Test::Exception: 0
   Test::More: 0.88
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
 distribution_type: module
-generated_by: 'Module::Install version 1.02'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -74,4 +75,4 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.90009
+version: 5.90010
