--- a/META.yml
+++ b/META.yml
@@ -3,10 +3,12 @@ abstract: 'The Catalyst Framework Runtime'
 author:
   - 'Sebastian Riedel <sri@cpan.org>'
 build_requires:
-  Class::Data::Inheritable: 0
+  Catalyst::Plugin::Params::Nested: 0
   Data::Dump: 0
   ExtUtils::MakeMaker: 6.59
   HTTP::Request::Common: 0
+  HTTP::Status: 0
+  IO::Scalar: 0
   Test::Exception: 0
   Test::More: 0.88
 configure_requires:
@@ -28,10 +30,13 @@ requires:
   Carp: 0
   Catalyst::DispatchType::Regex: 5.90021
   Class::C3::Adopt::NEXT: 0.07
+  Class::Data::Inheritable: 0
   Class::Load: 0.12
   Class::MOP: 0.95
   Data::Dump: 0
   Data::OptList: 0
+  Devel::InnerPackage: 0
+  Encode: 2.49
   HTML::Entities: 0
   HTML::HeadParser: 0
   HTTP::Body: 1.06
@@ -39,7 +44,7 @@ requires:
   HTTP::Request: 5.814
   HTTP::Request::AsCGI: 1.0
   HTTP::Response: 5.813
-  LWP::UserAgent: 0
+  LWP: 5.837
   List::MoreUtils: 0
   MRO::Compat: 0
   Module::Pluggable: 3.9
@@ -63,7 +68,7 @@ requires:
   Tree::Simple: 1.15
   Tree::Simple::Visitor::FindByPath: 0
   Try::Tiny: 0
-  URI: 1.35
+  URI: 1.36
   namespace::autoclean: 0.09
   namespace::clean: 0.23
   perl: 5.8.3
@@ -73,5 +78,5 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.90030
+version: 5.90040
 x_authority: cpan:MSTROUT
