--- a/META.yml
+++ b/META.yml
@@ -43,6 +43,7 @@ requires:
   HTTP::Request: 5.814
   HTTP::Request::AsCGI: 1.0
   HTTP::Response: 5.813
+  Hash::MultiValue: 0
   JSON::MaybeXS: 1.000000
   LWP: 5.837
   List::MoreUtils: 0
@@ -56,9 +57,11 @@ requires:
   Path::Class: 0.09
   Plack: 0.9991
   Plack::Middleware::ReverseProxy: 0.04
+  Plack::Request::Upload: 0
   Plack::Test::ExternalServer: 0
   Safe::Isa: 0
   Scalar::Util: 0
+  Stream::Buffered: 0
   String::RewritePrefix: 0.004
   Sub::Exporter: 0
   Task::Weaken: 0
@@ -78,5 +81,5 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.90049_003
+version: 5.90049_004
 x_authority: cpan:MSTROUT
