--- a/META.yml
+++ b/META.yml
@@ -27,6 +27,7 @@ no_index:
     - t
 requires:
   CGI::Simple::Cookie: 1.109
+  CGI::Struct: 0
   Carp: 0
   Catalyst::DispatchType::Regex: 5.90021
   Class::C3::Adopt::NEXT: 0.07
@@ -81,5 +82,5 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.90049_004
+version: 5.90049_005
 x_authority: cpan:MSTROUT
