--- a/META.yml
+++ b/META.yml
@@ -29,7 +29,6 @@ requires:
   CGI::Simple::Cookie: 1.109
   CGI::Struct: 0
   Carp: 0
-  Catalyst::DispatchType::Regex: 5.90021
   Class::C3::Adopt::NEXT: 0.07
   Class::Data::Inheritable: 0
   Class::Load: 0.12
@@ -82,5 +81,5 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: 5.90052
+version: 5.90059_001
 x_authority: cpan:MSTROUT
