--- a/META.yml
+++ b/META.yml
@@ -38,7 +38,7 @@ requires:
   Encode: '2.49'
   HTML::Entities: 0
   HTML::HeadParser: 0
-  HTTP::Body: '1.06'
+  HTTP::Body: '1.20'
   HTTP::Headers: '1.64'
   HTTP::Request: '5.814'
   HTTP::Request::AsCGI: '1.0'
@@ -64,7 +64,7 @@ requires:
   Plack::Middleware::IIS6ScriptNameFix: 0
   Plack::Middleware::IIS7KeepAliveFix: 0
   Plack::Middleware::LighttpdScriptNameFix: 0
-  Plack::Middleware::MethodOverride: 0
+  Plack::Middleware::MethodOverride: '0.12'
   Plack::Middleware::RemoveRedundantBody: '0.03'
   Plack::Middleware::ReverseProxy: '0.04'
   Plack::Request::Upload: 0
@@ -92,5 +92,5 @@ resources:
   homepage: http://dev.catalyst.perl.org/
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Runtime.git
-version: '5.90082'
+version: '5.90083'
 x_authority: cpan:MSTROUT
